# mycode_statusline

./: .gitattributes  .gitignore  .mcp.json  Cargo.toml  LICENSE  README.md  sync_all_configs_to_wsl.bat
.github/workflows/: release.yml
npm/main/: README.md  package.json
npm/main/scripts/: postinstall.js
npm/scripts/: prepare-packages.js
src/: cli.rs  lib.rs  main.rs  updater.rs
src/api/: cache.rs  client.rs  mod.rs
src/auto_config/: claude_settings.rs  mod.rs
src/config/: loader.rs  models.rs  types.rs
src/core/: statusline.rs
src/core/segments/: cubence_balance.rs  cubence_five_hour.rs  cubence_latency.rs  cubence_load_status.rs  cubence_multiplier.rs  cubence_status.rs  cubence_subscription.rs  cubence_usage.rs  cubence_weekly.rs  mod.rs  model.rs  usage.rs  uucode_status.rs  uucode_subscription.rs  uucode_usage.rs
src/ui/: app.rs  main_menu.rs
src/ui/components/: help.rs  preview.rs  segment_list.rs  settings.rs
src/ui/themes/: presets.rs  theme_cometix.rs  theme_default.rs  theme_gruvbox.rs  theme_minimal.rs  theme_nord.rs  theme_powerline_dark.rs  theme_powerline_light.rs  theme_powerline_rose_pine.rs  theme_powerline_tokyo_night.rs
src/utils/: claude_code_patcher.rs
src/wrapper/: injector.rs  io_interceptor.rs  mod.rs
