[package]
name = "uucode"
version = "1.0.0"
edition = "2021"
description = "uucode - Claude Code 状态栏增强工具，集成用量监控等功能"
authors = ["uucode Team"]
license = "MIT"
repository = "https://github.com/hollegjx/uucode"
readme = "README.md"
keywords = ["claude", "statusline", "uucode", "claude-code"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "uucode"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
toml = "0.8"

ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }

ansi_term = { version = "0.12", optional = true }
ansi-to-tui = { version = "7.0", optional = true }

ureq = { version = "2.10", features = ["json"], optional = true }
semver = { version = "1.0", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
dirs = { version = "5.0", optional = true }
regex = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "blocking", "rustls-tls", "gzip"] }
base64 = "0.21"
which = "6.0"

[features]
default = ["tui", "self-update", "dirs"]
tui = ["ratatui", "crossterm", "ansi_term", "ansi-to-tui", "chrono"]
self-update = ["ureq", "semver", "chrono", "dirs"]

[profile.release]
strip = true           # 移除调试符号，能减少约 2-3MB
lto = true            # 链接时优化，减少重复代码
codegen-units = 1     # 更好的优化，略微增加编译时间
opt-level = "z"       # 优化文件大小（或用 "s"）
panic = "abort"       # 移除 panic 展开代码
